syntax = "proto3";

package controller.storage.iam.store.v1;
option go_package = "github.com/hashicorp/watchtower/internal/iam/store;store";

import "controller/storage/iam/store/v1/timestamp.proto";
import "controller/storage/iam/store/v1/scope.proto";

message RoleGrant {
  // public_id is used to access the Role via an API
  // @inject_tag: gorm:"primary_key"
  string public_id = 1;

  // create_time from the RDBMS
  // @inject_tag: `gorm:"default:current_timestamp"`
  Timestamp create_time = 2;

  // update_time from the RDBMS
  // @inject_tag: `gorm:"default:current_timestamp"`
  Timestamp update_time = 3;

  // @inject_tag: `gorm:"default:null"`
  string description = 4;

  string role_id = 5;

  string grant = 6;
}
